src/component/tree/tests/snapshots/envision__component__tree__tests__snapshot__view_deep_nesting_selection_at_leaf.snap
---
source: src/component/tree/tests/snapshot.rs
expression: terminal.backend().to_string()
---
▼ Level 1                               
  ▼ Level 2                             
    ▼ Level 3                           
        Leaf
