src/component/tree/tests/snapshots/envision__component__tree__tests__snapshot__view_focused_expanded_tree.snap
---
source: src/component/tree/tests/snapshot.rs
expression: terminal.backend().to_string()
---
▼ Root                                  
    Child 1                             
    Child 2
