src/component/tree/tests/snapshots/envision__component__tree__tests__snapshot__view_many_siblings.snap
---
source: src/component/tree/tests/snapshot.rs
expression: terminal.backend().to_string()
---
▼ Root                                  
    Item 1                              
    Item 2                              
    Item 3                              
    Item 4                              
    Item 5
