src/component/tree/tests/snapshots/envision__component__tree__tests__snapshot__view_multiple_roots_expanded.snap
---
source: src/component/tree/tests/snapshot.rs
expression: terminal.backend().to_string()
---
▼ Documents                             
    readme.md                           
    guide.md                            
▼ Projects                              
    envision                            
  Downloads
