src/component/tree/tests/snapshots/envision__component__tree__tests__snapshot__view_selection_on_child.snap
---
source: src/component/tree/tests/snapshot.rs
expression: terminal.backend().to_string()
---
▼ Root                                  
    Child 1                             
    Child 2                             
    Child 3
