src/component/tree/tests/snapshots/envision__component__tree__tests__snapshot__view_selection_on_last_root.snap
---
source: src/component/tree/tests/snapshot.rs
expression: terminal.backend().to_string()
---
  Root 1                                
  Root 2                                
  Root 3
