src/component/tree/tests/snapshots/envision__component__tree__tests__snapshot__view_unicode_labels.snap
---
source: src/component/tree/tests/snapshot.rs
expression: terminal.backend().to_string()
---
▼ 文 件 夹                                 
    文 档 .txt                            
    图 片 .png                            
  설 정
